[metadata]
license = MIT
license_file = LICENSE 
classifiers = 
    programmimg Language :: python ::3.7
    programming Language :: python ::3.8
    programming Language :: Python ::3.9
    operating system :: OS Independent

[options]
install_requires = 
    ensure == 1.0.2
    py-youtube == 1.1.7
python_requires = >=3.7

[options_extras_require]
testing = 
    pytest >=7.1.3
    mypy >=0.971
    flake8>=5.0.4
    tox>=3.25.1
    black>=22.8.0




